Changed project name to "esac" and added MIT license

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ on:
         description: "Test scenario tags"
 
 env:
-  IMAGE_REPO: ghcr.io/flapflapio/simulator
+  IMAGE_REPO: ghcr.io/obonobo/esac
   IMAGE_TAG: latest
 
 jobs:
