--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,9 +15,9 @@ on:
         required: false
         description: "Test scenario tags"
 
-env:
-  IMAGE_REPO: ghcr.io/obonobo/esac
-  IMAGE_TAG: latest
+# env:
+#   IMAGE_REPO: ghcr.io/obonobo/esac
+#   IMAGE_TAG: latest
 
 jobs:
   test:
@@ -25,8 +25,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ["1.17.1"]
-        # go-version: ["1.17.1", "1.16", "1.15", "1.14"]
+        go-version:
+          - "1.17"
+          # - "1.16"
+          # - "1.15"
+          # - "1.14"
     steps:
       - uses: actions/checkout@v2
       - name: Use go${{ matrix.go-version }}
