Added partial scanner generator tool.go
- Wrote a tool (tool.go) for generating the parser table
- Disambiguated the grammar

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
-name: Build
+name: Test
 
 on:
   pull_request:
   push:
     branches:
-      - main
+      - "*"
+      # - main
+      # - parser
   workflow_dispatch:
     inputs:
       logLevel:
