Parser along with some more minor changes
This commit adds all the a2 code for the parser.

Additional Changes:

- Fixed gitignore
- Added some more tests for the correct nested comments behaviour
- Also:
    Nested block comments `/* /* */ */` is one thing but nested inline comments
    is a bit ridiculous:

    ```plaintext
    // Comment 1 //
    struct my_struct { // Will be commented out!  ```

    So I've decided to remove this feature. Imbricated block comments are still
    supported.

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,18 @@ go.work
 # Test files that may need to be cleaned up...
 TestChugFile*
 tmp-*
+
+# Output
 *.outlexerrors
 *.outlextokens
 *.outlex*
 lex-demo
+
+# Debug binary
+__debug_bin
+
+# Parser output
+outderivation
+outsyntaxerrors
+*.outderivation
+*.outsyntaxerrors
