--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,12 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version:
-          - "1.18"
-          # - "1.17"
-          # - "1.16"
-          # - "1.15"
-          # - "1.14"
+        go-version: ["1.18"]
     steps:
       - uses: actions/checkout@v2
       - name: Use go${{ matrix.go-version }}
@@ -41,4 +36,6 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - run: make test
       - run: make build
-      - run: make build-static
+      - run: |
+          make build-static
+          file esacc | grep 'statically linked'
