Removed unused GitHub Actions workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,7 @@ name: Test
 on:
   pull_request:
   push:
-    branches:
-      - "*"
-      # - main
-      # - parser
+    branches: ["*"]
   workflow_dispatch:
     inputs:
       logLevel:
@@ -16,10 +13,6 @@ on:
       tags:
         required: false
         description: "Test scenario tags"
-
-# env:
-#   IMAGE_REPO: ghcr.io/obonobo/esac
-#   IMAGE_TAG: latest
 
 jobs:
   test:
