--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,5 @@ jobs:
       - run: make test
       - run: make build
       - run: |
-          make build-static
+          make static
           file esacc | grep 'statically linked'
